data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1133.wast
;; 4. **Test Case 4**: A `br_table` instruction with an index of zero, which is a valid indirect branch to the first loop target.    - **Constraint**: Ensuring the correct computation of a branch to the first target in a loop.    - **Relation to br_table Edge Case**: Ensures the handling of minimal index cases within loop contexts.

(assert_invalid
  (module
    (func $br_table_zero_index (block (loop (result i32) (block (br_table 0) (i32.const 0)))))
  )
  "br_table index out of bounds"
)